--- a/Maquette.html
+++ b/Maquette.html
@@ -12,15 +12,41 @@
 <body>
                 <!--Début du header-->
     <nav>
-        <div class="logohamb">|O &#9776;</div>
+        <div class="navcontainer">
+            <div class="logohamb">|O &#9776;</div>
+        </div>
     </nav>
     <header>
         <div class="wrapper0">
-            <h1 class="titre">Hello there!</h1>
-            <h2>We are Leon - Super Creative & Minimal<br>Agency  Web Template.</h2>
+            <h1 class="titre">Hello There!</h1>
             <p class="weleon"> We are Leon -Super Creative - Minimal <br> Agency Web Template </p>
         </div>
+        
     </header>
+    <section class="menuicons">
+        <div class="menucontainer">
+            <div class="menuwrapper">
+                &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;  &emsp; &emsp;
+                <div class="headericons">
+                    <h1 class="symboles">&#10000;</h1>
+                    <h1>Tell Us Your Idea</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Velit voluptatum ipsam enim<br> magni debitis sequi ab! Lorem ipsum dolor sit,<br> amet consectetur adipisicing elit. Velit<br> voluptatum ipsam enim magni debitis sequi ab!</p>
+                </div>
+                &emsp; &emsp; &emsp; &emsp;
+                <div class="headericons">
+                    <h1 class="symboles">&#9874;</h1>
+                    <h1>We Will Do All The Work</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Velit voluptatum ipsam enim<br> magni debitis sequi ab! Lorem ipsum dolor sit,<br> amet consectetur adipisicing elit. Velit<br> voluptatum ipsam enim magni debitis sequi ab!</p>
+                </div>
+                &emsp; &emsp; &emsp; &emsp;
+                <div class="headericons">
+                    <h1 class="symboles">&#9992;</h1>
+                    <h1>Your Product Is Worldwide</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Velit voluptatum ipsam enim<br> magni debitis sequi ab! Lorem ipsum dolor sit,<br> amet consectetur adipisicing elit. Velit<br> voluptatum ipsam enim magni debitis sequi ab!</p>
+                </div>
+            </div>
+        </div>
+    </section>
                 <!--Fin du header-->
                 <!--Section services-->
     <section class="services">
@@ -73,7 +99,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Velit voluptatum ipsam enim<br> magni debitis sequi ab! Lorem ipsum dolor sit,<br> amet consectetur adipisicing elit. Velit<br> voluptatum ipsam enim magni debitis sequi ab!</p>
                     </div>
                 </div>
-
+                &emsp;
                 <div class="menu6">
                     <div class="image2">
                         <img class="imgportfolio" src="images/mac.jpeg" alt="Cahier">
@@ -83,7 +109,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Velit voluptatum ipsam enim<br> magni debitis sequi ab! Lorem ipsum dolor sit,<br> amet consectetur adipisicing elit. Velit<br> voluptatum ipsam enim magni debitis sequi ab!</p>
                     </div>
                 </div>
-
+                &emsp;
                 <div class="menu7">
                     <div class="image2">
                         <img class="imgportfolio" src="images/livre.jpeg" alt="Cahier">
@@ -100,6 +126,7 @@
             <div class="bouton">
             <button>Show me more</button>
             </div>
+            <br>
     </section>
             <!--Fin section portfolio-->
     <section class="about">
