--- a/Maquette.html
+++ b/Maquette.html
@@ -149,23 +149,28 @@
  
 <!--contact --> 
 
-
-<div id="add"> 
    
 
 
-<div style="position:absolute;top:740px; width:1450px; height:14px; z-index:2;font-size:110%;">
+
+<div style="position:absolute;top:2940px; width:1050px; height:14px; z-index:2;font-size:110%;">
       <center><b> I was born to create </b></center>
 	  
 	  
-    </div>
+
 
 </div>
+
    
  
-	
-
-<div id="contact"> Feel free to drop us a line at :   <br>leonagency@mail.com<br>find us on social network :   " </div>
+<div id="contact"> Feel free to drop us a line at : </div>   
+<span id="mail">leonagency@mail.com </span>
+<span id="network">find us on social network :   "</span>
+ 
+ 
+ <center>
+ <div id="filigranecontact"> Contact </div>
+ </center>
  
  
  <!-- end -->
