--- a/Maquette.html
+++ b/Maquette.html
@@ -198,15 +198,36 @@
     <section class="about">
       <h1 class="fond">about</h1>
       <h1 class="soustitre">Less is more work</h1>
+      <br />
+      <br />
+      <div class="container3">
+        <div class="wrapper3">
+          <div class="book">
+            <img id="notebook" src="images/footer.jpeg" alt="Notebook." />
+          </div>
+          <div class="menu8">
+            <h4 class="border">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br />
+              sed do elusmod tempore incidlunt ut labore et dolore Lorem ipsum,
+              dolor sit amet consectetur adipisicing elit. <br />
+              sed do elusmod tempore incidlunt ut labore et doloreLorem ipsum,
+              dolor sit amet consectetur adipisicing elit. <br />
+              sed do elusmod tempore incidlunt ut labore et dolore<br />
+            </h4>
+          </div>
 
-      <img id="notebook" src="images/footer.jpeg" alt="Notebook." />
-
-      <h4>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br />
-        sed do elusmod tempore incidlunt ut labore et dolore<br />
-        magna allqua. Ut enlm ad minim velam, quls nostrud exarcltation ullamco
-        laborls nlsi ut allqui
-      </h4>
+          <div class="menu9">
+            <h4 class="border2">
+              magna allqua. Ut enlm ad minim velam, quls nostrud exarcltation
+              ullamco laborls nlsi ut allqui Lorem ipsum, dolor sit amet
+              consectetur adipisicing elit. <br />
+              sed do elusmod tempore incidlunt ut labore et dolore Lorem ipsum,
+              dolor sit amet consectetur adipisicing elit. <br />
+              sed do elusmod tempore incidlunt ut labore et dolore
+            </h4>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!--Fin section about-->
@@ -217,21 +238,24 @@
       <section class="contact">
         <h1 class="fond">Contact</h1>
         <h1 class="soustitre">I was born to create</h1>
-        <br>
-        <br>
-        <br>
+
         <div class="container4">
           <div class="wrapper4">
-            <div id="contact"><p>Feel free to drop us a line at :</p></div>
-            <br>
-            <span id="boxmail"><a class="mail" href="mailto:moi@gmail.lui">leonagency@mail.com</a></span>
-            <br>
-            <br>
-            <span id="network">find us on social network : "</span>
+            <div class="menu10">
+              <p class="feelfree">Feel free to drop us a line at :</p>
+            </div>
+            <div class="menu11">
+              <a class="mail" href="mailto:moi@gmail.lui"
+                >leonagency@mail.com</a
+              >
+            </div>
+            <div class="menu12">find us on social network : "</div>
           </div>
         </div>
+        <br />
+        <br />
         <div class="footer">
-        <div id="gaa"><p>© 2019 - Leon, All rights reserved</p></div>
+          <div id="gaa"><p>© 2019 - Leon, All rights reserved</p></div>
         </div>
       </section>
     </footer>
