--- a/Maquette.html
+++ b/Maquette.html
@@ -203,27 +203,22 @@
       <div class="container3">
         <div class="wrapper3">
           <div class="book">
-            <img id="notebook" src="images/footer.jpeg" alt="Notebook." />
+            <img id="notebook" src="images/footer.jpg" alt="Notebook." />
           </div>
           <div class="menu8">
             <h4 class="border">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br />
-              sed do elusmod tempore incidlunt ut labore et dolore Lorem ipsum,
+              sed do elusmod tempore incidlunt ut labore et dolore Lorem ipsum,<br>
               dolor sit amet consectetur adipisicing elit. <br />
-              sed do elusmod tempore incidlunt ut labore et doloreLorem ipsum,
-              dolor sit amet consectetur adipisicing elit. <br />
-              sed do elusmod tempore incidlunt ut labore et dolore<br />
+              sed do elusmod tempore incidlunt ut labore et dolore Lorem ipsum.
             </h4>
           </div>
 
           <div class="menu9">
             <h4 class="border2">
-              magna allqua. Ut enlm ad minim velam, quls nostrud exarcltation
-              ullamco laborls nlsi ut allqui Lorem ipsum, dolor sit amet
+              magna allqua. Ut enlm ad minim velam, quls nostrud exarcltation<br>
+              ullamco laborls nlsi ut allqui Lorem ipsum, dolor sit amet<br>
               consectetur adipisicing elit. <br />
-              sed do elusmod tempore incidlunt ut labore et dolore Lorem ipsum,
-              dolor sit amet consectetur adipisicing elit. <br />
-              sed do elusmod tempore incidlunt ut labore et dolore
             </h4>
           </div>
         </div>
