--- a/Maquette.html
+++ b/Maquette.html
@@ -10,7 +10,12 @@
 
   <body>
     <!--Début du header-->
-
+    <nav>
+        <span><a href="#services" class="liennav">Services</a></span>
+        <span><a href="#portfolio"class="liennav">Portfolio</a></span>
+        <span><a href="#about"class="liennav">About</a></span>
+        <span><a href="#contact"class="liennav">Contact</a></span>
+    </nav>
     <header>
       <div class="wrapper0">
         <h1 class="titre">Hello There!</h1>
@@ -66,7 +71,7 @@
 
     <!--Section services-->
 
-    <section class="services">
+    <section id="services">
       <h1 class="fond">services</h1>
       <h1 class="soustitre">Don't be busy, be productive</h1>
       <br />
@@ -128,7 +133,7 @@
 
     <!--Section portfolio-->
 
-    <section class="portfolio">
+    <section id="portfolio">
       <h1 class="fond">portfolio</h1>
       <h1 class="soustitre">if you do it right, it will last forever</h1>
       <br />
@@ -195,7 +200,7 @@
 
     <!--Section about-->
 
-    <section class="about">
+    <section id="about">
       <h1 class="fond">about</h1>
       <h1 class="soustitre">Less is more work</h1>
       <br />
@@ -230,7 +235,7 @@
     <!-- footer-->
 
     <footer>
-      <section class="contact">
+      <section id="contact">
         <h1 class="fond">Contact</h1>
         <h1 class="soustitre">I was born to create</h1>
 
